--- a/site/templates/produit/_form.html.twig
+++ b/site/templates/produit/_form.html.twig
@@ -8,6 +8,15 @@
 </div>
 
 <div class="form-group">
+    {{ form_label(produit.code, null, {'label': 'Code barre', 'label_attr': {'class': 'form-control-label'}}) }}
+    {% if is_granted('ROLE_ADMIN') or is_granted('ROLE_PROF') %}
+        {{ form_widget(produit.code, {'attr': {'class': 'form-control'}}) }}
+    {% else %}
+        {{ form_widget(produit.code, {'attr': {'class': 'form-control disabled'}}) }}
+    {% endif %}
+</div>
+
+<div class="form-group">
     {{ form_label(produit.designation, null, {'label': 'Designation', 'label_attr': {'class': 'form-control-label'}}) }}
     {% if is_granted('ROLE_ADMIN') or is_granted('ROLE_PROF') %}
         {{ form_widget(produit.designation, {'attr': {'class': 'form-control'}}) }}
