--- a/site/templates/base.html.twig
+++ b/site/templates/base.html.twig
@@ -17,7 +17,9 @@
     </head>
     <body>
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            {{ include('scan/index.html.twig') }}
+            {% if app.user %}
+                {{ include('scan/index.html.twig') }}
+            {% endif %}
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor03" aria-controls="navbarColor03" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
